@@ -98,22 +98,28 @@ public class CartServiceImpl implements  CartService{
     @Override
     public List<CartDTO> getAllCarts() {
         List<Cart> carts = cartRepository.findAll();
-        if(carts.isEmpty()){
-            throw new APIException(("No carts exist."));
+
+        if (carts.size() == 0) {
+            throw new APIException("No cart exists");
         }
 
-        List<CartDTO> cartDTOS = carts.stream()
-                .map((cart) -> {
-                    CartDTO cartDTO = modelMapper.map(cart, CartDTO.class);
-                    List<ProductDTO> productDTOS = cart.getCartItems().stream()
-                            .map(productList -> modelMapper.map(productList.getProduct(), ProductDTO.class))
-                            .toList();
-                    cartDTO.setProducts(productDTOS);
-                    return cartDTO;
-                }).toList();
+        List<CartDTO> cartDTOs = carts.stream().map(cart -> {
+            CartDTO cartDTO = modelMapper.map(cart, CartDTO.class);
+
+            List<ProductDTO> products = cart.getCartItems().stream().map(cartItem -> {
+                ProductDTO productDTO = modelMapper.map(cartItem.getProduct(), ProductDTO.class);
+                productDTO.setQuantity(cartItem.getQuantity()); // Set the quantity from CartItem
+                return productDTO;
+            }).collect(Collectors.toList());
 
 
-        return cartDTOS;
+            cartDTO.setProducts(products);
+
+            return cartDTO;
+
+        }).collect(Collectors.toList());
+
+        return cartDTOs;
     }
 
     @Override
